recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:4: error: not found: value n
		if(i==5) n=0;
                         ^Spiral:5: error: not found: value n
	avance(n);
               ^Spiral:7: error: not found: value n
	n=n+3;
        ^